scripts/nullness/original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8.txt
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Generacion.java:55: error: [initialization.static.field.uninitialized] static field selector not initialized
	private static Selector selector;
	                        ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Generacion.java:56: error: [initialization.static.field.uninitialized] static field selectorPostCruce not initialized
	private static SelectorPostCruce selectorPostCruce;
	                                 ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Generacion.java:65: error: [initialization.fields.uninitialized] the constructor does not initialize fields: poblacion, generador
	public Generacion() {
	       ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Generacion.java:74: error: [initialization.fields.uninitialized] the constructor does not initialize fields: generador
	public Generacion(Poblacion poblacion) {
	       ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Poblacion.java:59: error: [initialization.fields.uninitialized] the constructor does not initialize fields: individuos, mejorIndividuo, peorIndividuo
	public Poblacion() {
	       ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Poblacion.java:75: error: [initialization.fields.uninitialized] the constructor does not initialize fields: individuos, mejorIndividuo, peorIndividuo
	public Poblacion(int opcion) {
	       ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Poblacion.java:78: error: [method.invocation] call to aleatoria() not allowed on the given receiver.
			this.aleatoria();
			              ^
  found   : @UnderInitialization @NonNull Poblacion
  required: @Initialized @NonNull Poblacion
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Generador.java:31: error: [initialization.field.uninitialized] the default constructor does not initialize field generacion
	private Generacion generacion;
	                   ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Generador.java:33: error: [initialization.static.field.uninitialized] static field gnaCruce not initialized
	private static Random gnaCruce;
	                      ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Generador.java:34: error: [initialization.static.field.uninitialized] static field gnaMutacion not initialized
	private static Random gnaMutacion;
	                      ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Generador.java:35: error: [initialization.field.uninitialized] the default constructor does not initialize field nuevos
	private Individuo[] nuevos;
	                    ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Generador.java:36: error: [initialization.field.uninitialized] the default constructor does not initialize field padres
	private Individuo[] padres;
	                    ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Generador.java:37: error: [initialization.field.uninitialized] the default constructor does not initialize field hijos
	private Individuo[] hijos;
	                    ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Generador.java:38: error: [initialization.field.uninitialized] the default constructor does not initialize field exitosos
	private Individuo[] exitosos;
	                    ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Generador.java:39: error: [initialization.field.uninitialized] the default constructor does not initialize field mejor
	private Individuo mejor;
	                  ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Generador.java:40: error: [initialization.field.uninitialized] the default constructor does not initialize field peor
	private Individuo peor;
	                  ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Generador.java:43: error: [initialization.field.uninitialized] the default constructor does not initialize field adicionales
	private Individuo[] adicionales;//individuos adicionales
	                    ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Individuo.java:47: error: [initialization.static.field.uninitialized] static field tipoIndividuo not initialized
	private static Individuo tipoIndividuo;
	                         ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Individuo.java:103: error: [return] incompatible types in return.
		return individuoConcreto;
		       ^
  type of expression: @Initialized @Nullable Individuo
  method return type: @Initialized @NonNull Individuo
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Ejecucion.java:33: error: [initialization.field.uninitialized] the default constructor does not initialize field generaciones
	private Generacion[] generaciones;
	                     ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Proceso.java:35: error: [initialization.field.uninitialized] the default constructor does not initialize field ejecuciones
	private Ejecucion[] ejecuciones;
	                    ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/impl/IndividuoCombinatorio.java:58: error: [initialization.field.uninitialized] the default constructor does not initialize field cromosoma
	private int[] cromosoma;
	              ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/impl/IndividuoCombinatorio.java:59: error: [initialization.field.uninitialized] the default constructor does not initialize field crucePMX
	private CrucePMX crucePMX;
	                 ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/impl/CrucePMX.java:54: error: [initialization.field.uninitialized] the default constructor does not initialize field a
	private int[] a;// cromosoma madre
	              ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/impl/CrucePMX.java:55: error: [initialization.field.uninitialized] the default constructor does not initialize field b
	private int[] b;// cromosoma padre
	              ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/impl/CrucePMX.java:56: error: [initialization.field.uninitialized] the default constructor does not initialize field c
	private int[] c;// cromosoma hijo1
	              ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/impl/CrucePMX.java:57: error: [initialization.field.uninitialized] the default constructor does not initialize field d
	private int[] d;// cromosoma hijo2
	              ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/impl/SelectorEstocastico.java:63: error: [initialization.fields.uninitialized] the constructor does not initialize fields: poolDeSeleccionados
	public SelectorEstocastico(Funcion funcValEsp) {
	       ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/impl/SelectorTodos.java:39: error: [initialization.field.uninitialized] the default constructor does not initialize field poolDeSeleccionados
	private Individuo[] poolDeSeleccionados;// individuos elegidos
	                    ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/impl/IndividuoBinario.java:45: error: [initialization.field.uninitialized] the default constructor does not initialize field cromosoma
	private boolean[] cromosoma;
	                  ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/impl/SelectorTorneo.java:74: error: [initialization.fields.uninitialized] the constructor does not initialize fields: poolDeSeleccionados
	public SelectorTorneo(double k) {
	       ^
../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Configuracion.java:57: error: [initialization.field.uninitialized] the default constructor does not initialize field proceso
	private Proceso proceso;
	                ^
Note: ../original/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Individuo.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
32 errors
